[gd_scene load_steps=13 format=1]

[ext_resource path="res://Scripts/game_over.gd" type="Script" id=1]
[ext_resource path="res://Textures/background.tex" type="Texture" id=2]
[ext_resource path="res://Textures/door_left.tex" type="Texture" id=3]
[ext_resource path="res://Textures/door_right.tex" type="Texture" id=4]
[ext_resource path="res://Textures/score_screen.tex" type="Texture" id=5]
[ext_resource path="res://Fonts/audiowide.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Textures/btn_replay.tex" type="Texture" id=7]
[ext_resource path="res://Textures/btn_replay_pressed.tex" type="Texture" id=8]
[ext_resource path="res://Textures/btn_menu.tex" type="Texture" id=9]
[ext_resource path="res://Textures/btn_menu_pressed.tex" type="Texture" id=10]

[sub_resource type="Animation" id=1]

resource/name = "intro"
length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("score_screen/texture:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.6, 1.3 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 87, -1110 ), Vector2( 85, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("btn_menu:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 1, 1.5 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 172, 1936 ), Vector2( 172, 1288 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("btn_replay:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 1.1, 1.5 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 172, 2209 ), Vector2( 172, 1561 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("door/door_left:rect/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.1, 1.1 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( -555, 0 ), Vector2( 0, 0 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("door/door_right:rect/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0.1, 1.1 ), "transitions":FloatArray( 0.25, 0.25 ), "update":0, "values":[ Vector2( 1098, 0 ), Vector2( 540, 0 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("background:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 1, 1.1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[sub_resource type="Animation" id=2]

resource/name = "outro"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("score_screen/texture:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.1, 0.6 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 85, 0 ), Vector2( 85, -1114 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("btn_replay:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.3, 0.8 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 172, 1561 ), Vector2( 172, 2217 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("btn_menu:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.4, 0.9 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 172, 1288 ), Vector2( 172, 1944 ) ] }
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0.9 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"go_to_next_scene" } ] }
tracks/4/type = "value"
tracks/4/path = NodePath("door/door_left:rect/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0.2, 0.9 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( -558, 0 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("door/door_right:rect/pos")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = { "times":FloatArray( 0.2, 0.9 ), "transitions":FloatArray( 4, 4 ), "update":0, "values":[ Vector2( 540, 0 ), Vector2( 1098, 0 ) ] }

[node name="game_over" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="background" type="TextureFrame" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="door" type="Node2D" parent="."]

[node name="door_left" type="TextureFrame" parent="door"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -555.0
margin/top = 0.0
margin/right = -15.0
margin/bottom = 1920.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="door_right" type="TextureFrame" parent="door"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1098.0
margin/top = 0.0
margin/right = 1638.0
margin/bottom = 1920.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="score_screen" type="Node2D" parent="."]

[node name="texture" type="TextureFrame" parent="score_screen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 87.0
margin/top = -1110.0
margin/right = 997.0
margin/bottom = 14.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="lbl_highscore" type="Label" parent="score_screen/texture"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 344.0
margin/top = 789.0
margin/right = 790.0
margin/bottom = 892.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.835294, 0.866667, 0.886275, 1 )
text = "3920"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbl_score" type="Label" parent="score_screen/texture"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 344.0
margin/top = 516.0
margin/right = 790.0
margin/bottom = 619.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.835294, 0.866667, 0.886275, 1 )
text = "3920"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/intro = SubResource( 1 )
anims/outro = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "intro"

[node name="btn_replay" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 172.0
margin/top = 2209.0
margin/right = 898.0
margin/bottom = 2404.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )

[node name="btn_menu" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 172.0
margin/top = 1936.0
margin/right = 898.0
margin/bottom = 2131.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )

[connection signal="pressed" from="btn_replay" to="." method="_on_btn_replay_pressed"]

[connection signal="pressed" from="btn_menu" to="." method="_on_btn_menu_pressed"]


